trunk/Archive/12138340ca33869d063c559b5b4c152e-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:66:26: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
   const char s[6]{"Hello"};                           
                          ^
